# advent-of-code-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: aoc-badge.yml  ci.yml  update-readme.yml
scripts/: boilerplate.py  get_input.py
src/advent_of_code/: util.py
src/advent_of_code/y2020/: d1.py  d2.py  d3.py  d4.py  d5.py  d6.py
src/advent_of_code/y2021/: d1.py  d2.py  d3.py
src/advent_of_code/y2023/: d1.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py
tests/: test_advent_of_code.py  test_util.py
tests/test_2023/: test_d1.py
tests/test_y2020/: test_d1.py  test_d2.py  test_d3.py  test_d4.py  test_d5.py  test_d6.py
tests/test_y2021/: test_d1.py  test_d2.py  test_d3.py
tests/test_y2023/: test_d2.py  test_d3.py  test_d4.py  test_d5.py  test_d6.py  test_d7.py
